[gd_scene load_steps=7 format=2]

[ext_resource path="res://Hud/scripts/InventoryItemDisplay.gd" type="Script" id=1]
[ext_resource path="res://assets/die_03.png" type="Texture" id=2]
[ext_resource path="res://assets/ring_inner_grey.png" type="Texture" id=3]
[ext_resource path="res://assets/green_simple_potion.png" type="Texture" id=4]
[ext_resource path="res://assets/CMONNEAR.TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 23
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="InventoryTile" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.225, 0.39 )
texture = ExtResource( 2 )

[node name="ItemBackground" type="TextureRect" parent="."]
margin_left = 11.2209
margin_top = 7.84237
margin_right = 267.221
margin_bottom = 263.842
rect_scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 3 )

[node name="ItemTexture" type="TextureRect" parent="."]
margin_left = 28.782
margin_top = 27.9121
margin_right = 156.782
margin_bottom = 155.912
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="ItemName" type="Label" parent="."]
margin_left = 123.973
margin_top = 15.0
margin_right = 334.973
margin_bottom = 116.0
custom_fonts/font = SubResource( 1 )
text = "Breif Strength Potion"
align = 1
valign = 1
autowrap = true

[node name="ItemAmount" type="Label" parent="."]
margin_left = 344.947
margin_top = 15.46
margin_right = 410.947
margin_bottom = 117.46
custom_fonts/font = SubResource( 1 )
text = "11"
align = 1
valign = 1
autowrap = true
